--- a/cwierkaczApp/app/src/main/res/values/strings.xml
+++ b/cwierkaczApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">cwierkaczApp</string>
     <string name="hint_email">Email</string>
+    <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="button_login">Login</string>
+    <string name="button_signup">Signup</string>
     <string name="text_signup">No account? Go to Signup</string>
+    <string name="text_login">Already have a account? Go to Login</string>
 </resources>
