--- a/cwierkaczApp/app/src/main/res/values/strings.xml
+++ b/cwierkaczApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_signup">Signup</string>
     <string name="text_signup">No account? Go to Signup</string>
     <string name="text_login">Already have a account? Go to Login</string>
+    <string name="hint_search">Search</string>
 </resources>
