--- a/cwierkaczApp/app/src/main/res/values/strings.xml
+++ b/cwierkaczApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="text_signup">No account? Go to Signup</string>
     <string name="text_login">Already have a account? Go to Login</string>
     <string name="hint_search">Search</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
