--- a/cwierkaczApp/app/src/main/res/values/strings.xml
+++ b/cwierkaczApp/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="button_login">Login</string>
-    <string name="button_signup">Signup</string>
+    <string name="button_signup">Sign up</string>
+    <string name="button_apply">Apply</string>
+    <string name="button_signout">Sign out</string>
     <string name="text_signup">No account? Go to Signup</string>
     <string name="text_login">Already have a account? Go to Login</string>
     <string name="hint_search">Search</string>
